--- a/style.css
+++ b/style.css
@@ -145,9 +145,6 @@ h3 {
   }
 }
 
-
-
-
 /* ABOUT */
 
 .about_me {
@@ -232,10 +229,7 @@ h3 {
   }
 }
 
-
-
-.portfolio_area {
-  
+.portfolio_area {  
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
@@ -365,7 +359,6 @@ h3 {
   z-index: 9;
 }
 
-
 .sample-text-area {
   background: #fff;
   padding: 100px 0 70px 0;
@@ -416,198 +409,6 @@ h5,
 h6 {
   line-height: 1.2em;
 }
-
-
-
-/************* BURGUER 
-
-#menuToggle {
-  display: block;
-  position: fixed;
-  top: 5vh;
-  left: 50px;
-  z-index: 1;
-  -webkit-user-select: none;
-  user-select: none;
-}
-
-#menuToggle a {
-  text-decoration: none;
-  color: #232323;
-  transition: color 0.3s ease;
-}
-
-#menuToggle input {
-  display: block;
-  width: 40px;
-  height: 32px;
-  position: absolute;
-  top: -7px;
-  left: -5px;
-  cursor: pointer;
-  opacity: 0; 
-  z-index: 2; 
-  -webkit-touch-callout: none;
-}
-
-
-#menuToggle span {
-  display: block;
-  width: 33px;
-  height: 4px;
-  margin-bottom: 5px;
-  position: relative;
-  background: black;
-  border-radius: 3px;
-  z-index: 1;
-  transform-origin: 4px 0px;
-  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
-    opacity 0.55s ease;
-}
-
-#menuToggle span:first-child {
-  transform-origin: 0% 0%;
-}
-
-#menuToggle span:nth-last-child(2) {
-  transform-origin: 0% 100%;
-}
-
-
-#menuToggle input:checked ~ span {
-  opacity: 1;
-  transform: rotate(45deg) translate(-2px, -1px);
-  background: #232323;
-}
-
-#menuToggle input:not(:checked) ~ #menu {
-  display: none;
-}
-
-#menuToggle input:checked ~ #menu {
-  display: block;
-  animation: slide-down 0.4s ease-out;
-}
-
-@keyframes slide-down {
-  0% {
-    opacity: 0;
-    transform: translateX(-100%);
-  }
-  100% {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-
-
-#menuToggle input:checked ~ span:nth-last-child(3) {
-  opacity: 0;
-  transform: rotate(0deg) scale(0.2, 0.2);
-}
-
-#menuToggle input:checked ~ span:nth-last-child(2) {
-  transform: rotate(-45deg) translate(0, -1px);
-}
-
-
-#menu {
-  text-align: center;
-  justify-content: center;  
-  background-color: white;
-  width: 100vw;
-  margin: -80px -2px 0 -50px;
-  padding-top: 3vh;
-  height: 15vh;
-  padding-left: 0%!important;
-  list-style-type: none;
-  -webkit-font-smoothing: antialiased;
- 
-  -webkit-box-shadow: 14px -1px 7px -14px rgba(0, 0, 0, 0.36);
-  -moz-box-shadow: 14px -1px 7px -14px rgba(0, 0, 0, 0.36);
-  box-shadow: 14px -1px 7px -14px rgba(0, 0, 0, 0.36);
-  opacity: 0.95;
-
-  -webkit-box-shadow: 0px 4px 29px -12px rgba(0,0,0,0.89);
--moz-box-shadow: 0px 4px 29px -12px rgba(0,0,0,0.89);
-box-shadow: 0px 4px 29px -12px rgba(0,0,0,0.89);
-}
-
-#menu li {
-  padding: 0;
-  font-size: 3vh;
-  font-family: "Montserrat";
-  opacity: 1;
-  position: relative;
-  padding: 15px 0;
-}
-
-#menu a {
-  display: inline-block;
-  padding: 15px 20px 15px 20px;
-  position: relative;
-}
-
-
-
-.navigation {
-  display: inline-flex;
-  text-align: center;
-  margin-right: 10vh;
-  justify-content: center;
-  line-height: -1%;
-  border-style: solid;
-  opacity: 1;
-  border-width: 0px 0px 18px;
-  border-color: transparent;
-  opacity: 1;
-  transition: all 0.2s;
-  letter-spacing: 0.15em;
-  transition: width 0.3s ease 0s, left 0.3s ease 0s;
-}
-
-.navigation:hover {
-  border-width: 0px 0px 18px;
-}
-
-a:hover {
-  text-decoration: none;
-}
-
-
-a:after {
-  background: none repeat scroll 0 0 transparent;
-  bottom: 0;
-  margin-top: -18%;
-  content: "";
-  display: block;
-  height: 2vh;
-  transition: width 0.3s ease 0s, left 0.3s ease 0s;
-  width: 0;
-}
-
-#home-nav:after {
-  background: #ffe1ef;
-}
-
-#about-nav:after {
-  background: #faf3d5;
-}
-#portfolio-nav:after {
-  background: #e0f0f8;
-}
-
-a:hover:after {
-  width: 100%;
-  left: 0;
-}
-
-
-#menuToggle input:checked ~ ul {
-  transform: none;
-}
-*************/
-
 
 
 /************* INTRO *************/
@@ -691,10 +492,10 @@ a:focus {
 }
 
 button {
-  background: transparent;
-  padding-left: 3vw;
-  padding-right: 3vw;
-  height: 7vh;
+  background: white;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  height: 4vh;
   width: auto;
   text-align: center;
   cursor: pointer;
@@ -703,10 +504,9 @@ button {
   font-weight: 900;
   letter-spacing: 3px;
   text-transform: uppercase;
-  border-width: 4px;
   border-color: #b8daeb;
-  color: #b8daeb;
-  border-radius: 22px;
+  color: darkblue;
+  border-radius: 5rem;
 }
 
 button:hover {
@@ -790,7 +590,6 @@ img {
   animation: float-between 4s ease-in-out infinite;
 }
 
-
 #down-purple-stain {
   float: left;
   width: 100vh;
@@ -799,7 +598,6 @@ img {
   animation: float 5s ease-in-out infinite;
 }
 
-
 /***Círculos***/
 
 #circle1{
@@ -807,7 +605,6 @@ img {
   top: -40vh;
   left: -17vh;
 }
-
 
 #circle2{
   position: absolute;
@@ -837,10 +634,7 @@ img {
   position: absolute;
   top:-30vh;
   left: 50vh;
- 
 }
-
-
 
 svg {
   transform-origin: 50% 50%;
