--- a/style.css
+++ b/style.css
@@ -1,3 +1,93 @@
+:root {
+  --spacing-0: 0;
+  --spacing-0-5: 0.125rem;
+  --spacing-1: 0.25rem;
+  --spacing-2: 0.5rem;
+  --spacing-3: 0.75rem;
+  --spacing-4: 1rem;
+  --spacing-5: 1.25rem;
+  --spacing-6: 1.5rem;
+  --spacing-7: 1.75rem;
+  --spacing-8: 2rem;
+  --spacing-9: 2.25rem;
+  --spacing-10: 2.5rem;
+  --spacing-11: 2.75rem;
+  --spacing-12: 3rem;
+  --spacing-14: 3.5rem;
+  --spacing-16: 4rem;
+  --spacing-20: 5rem;
+  --spacing-24: 6rem;
+  --spacing-28: 7rem;
+  --spacing-32: 8rem;
+  --spacing-36: 9rem;
+  --spacing-40: 10rem;
+  --spacing-44: 11rem;
+  --spacing-48: 12rem;
+  --spacing-52: 13rem;
+  --spacing-56: 14rem;
+  --spacing-60: 15rem;
+  --spacing-64: 16rem;
+  --spacing-72: 18rem;
+  --spacing-80: 20rem;
+  --spacing-88: 22rem;
+  --spacing-96: 24rem;
+
+  --text-xs: 0.75rem;
+  --text-sm: 0.875rem;
+  --text-base: 1rem;
+  --text-lg: 1.125rem;
+  --text-xl: 1.25rem;
+  --text-2xl: 1.5rem;
+  --text-3xl: 1.875rem;
+  --text-4xl: 2.25rem;
+  --text-5xl: 3rem;
+  --text-6xl: 3.75rem;
+  --text-7xl: 4.5rem;
+  --text-8xl: 6rem;
+
+  --font-thin: 100;
+  --font-extralight: 200;
+  --font-light: 300;
+  --font-normal: 400;
+  --font-medium: 500;
+  --font-semibold: 600;
+  --font-bold: 700;
+  --font-extrabold: 800;
+  --font-black: 900;
+
+  --font-sans: "Nunito", system-ui;
+  --gray-900: hsl(250, 35%, 15%);
+  --gray-800: hsl(250, 28%, 19%);
+  --gray-700: hsl(250, 19%, 27%);
+  --gray-600: hsl(250, 14%, 34%);
+  --gray-500: hsl(250, 9%, 46%);
+  --gray-400: hsl(250, 11%, 65%);
+  --gray-300: hsl(250, 2%, 84%);
+  --gray-200: hsl(250, 13%, 91%);
+  --gray-100: hsl(250, 14%, 96%);
+  --gray-000: hsl(245, 33%, 98%);
+  --white: white;
+  --purple-light: #f0f1ff;
+  --purple: #7257fa;
+  --purple-dark: #3c2e7f;
+  --green: #48cb8a;
+  --red: #f25c54;
+  --yellow: #ffd53d;
+  --tracking-tight: -0.025em;
+  --tracking-tighter: -0.05em;
+  --leading-none: 1;
+  --leading-tight: 1.25;
+  --leading-snug: 1.375;
+  --leading-normal: 1.5;
+  --leading-relaxed: 1.625;
+  --leading-loose: 2;
+  --body-padding: var(--spacing-12);
+}
+*, *::before, *::after {
+  box-sizing: inherit;
+  margin: 0;
+  padding: 0;
+}
 html,
 body {
   width: 100%;
@@ -6,9 +96,12 @@ body {
   text-align: left;
   line-height: 2vh;
   font-weight: 400;
+  font-family: var(--font-sans);
 }
 
-
+ol, ul {
+  list-style: none;
+}
 a:focus,
 .button:focus, button:focus {
   text-decoration: none;
@@ -22,28 +115,40 @@ a:focus {
 
 h1, h2, h3, h4, h5 {
   font-family: "Muli", sans-serif;
-  color: white;
+  color: var(--white);
 }
 
 p {
   font-size: 16px;
   font-weight: 300;
   line-height: 28px;
-  color: white;
+  color: var(--white);
   margin-bottom: 13px;
   font-family: "Muli", sans-serif;
 }
 
 *::-moz-selection {
   background: #444;
-  color: #fff;
+  color: var(--white);
   text-shadow: none;
 }
 
 ::selection {
   background: #444;
-  color: #fff;
+  color: var(--white);
   text-shadow: none;
+}
+
+.visually-hidden {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: auto;
+  margin: 0;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+  white-space: nowrap;
 }
 
 
@@ -52,7 +157,7 @@ h3 {
 }
 
 .white-bg {
-  background: #ffffff;
+  background: var(--white);
 }
 
 .section_title span {
@@ -123,11 +228,11 @@ h3 {
 }
 
 .section_title.white_text h3 {
-  color: #fff;
+  color: var(--white);
 }
 
 .section_title.white_text span {
-  color: #fff;
+  color: var(--white);
   padding-top: 0;
 }
 
@@ -421,6 +526,7 @@ h6 {
   justify-content: center;
   align-items: center;
   overflow: hidden;
+  width: auto;
 }
 
 #intro-about {
@@ -492,7 +598,7 @@ a:focus {
 }
 
 button {
-  background: white;
+  background: var(--white);
   padding-left: 2rem;
   padding-right: 2rem;
   height: 5vh;
@@ -513,7 +619,7 @@ button:hover {
   transition: 0.35s;
   border-color: #b8daeb;
   background: #b8daeb;
-  color: white;
+  color: var(--white);
 
 }
 
@@ -636,7 +742,7 @@ img {
   left: 50vh;
 }
 
-svg {
+#stain-container svg {
   transform-origin: 50% 50%;
   animation: move 24s ease-in-out infinite;
 }
@@ -663,7 +769,7 @@ svg {
 }
 
 .arrows path {
-  stroke: whitesmoke;
+  stroke: var(--white);
   opacity: 0.2;
 	fill: transparent;
 	stroke-width: 1px;	
@@ -735,22 +841,47 @@ svg {
 
 
 
-/************* CONTACT *************/
+/************* FOOTER *************/
 
-#footer-aboutme {
+.footer{
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  margin-top: var(--spacing-52);
+  height: var(--spacing-80);
+  margin-left: calc(var(--body-padding)*-1);
+}
+.footer__wave {
+  width: 100%;
+  flex-shrink: 0;
+  overflow: visible;
+}
+.footer__wave path {
+  fill: var(--gray-000);
+}
+.footer__content {
+  width: 100%;
+  height: 100%;
+  padding-top: var(--spacing-20);
+  display: flex;
   justify-content: center;
   align-items: center;
-  text-align: center;
-  background-color: #001D38;
+  flex-direction: column;
+  height: 100%;
+  flex-grow: 1;
+  background: var(--gray-000);
 }
-
-#footer-aboutme p{
-  color: white;
+.footer__icons {
+  display: flex;
 }
-#footer-aboutme button{
-  padding-bottom: auto;
+.footer__icons li svg {
+  color: var(--gray-600);
 }
-
-#footer-aboutme a{
-display: inline-block;
+.footer__icons li {
+  margin: 0 var(--spacing-3);
+}
+.footer__copywrite {
+  margin-top: var(--spacing-8);
+  font-size: var(--text-sm);
+  color: var(--gray-600);
 }
